# Bravebird-Siddhesh

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  TESTING.md  docker-compose.yml  pyproject.toml
agent/: agent.py  requirements.txt
cdk/: cdk.context.json  cdk.json  package-lock.json  package.json
cdk/lambda/dispatcher/: dispatcher.py
cdk/lambda/recovery/: recovery.py
cdk/lib/config/: environments.ts
cdk/lib/constructs/: fargate-worker.ts  sqs-with-dlq.ts  tenant-scoped-role.ts
cdk/lib/stacks/: auth-stack.ts  compute-stack.ts  data-stack.ts  frontend-stack.ts  monitoring-stack.ts  network-stack.ts  queue-stack.ts
docker/: Dockerfile.agent  Dockerfile.api
frontend/: next.config.ts
frontend/src/app/: ClientLayout.tsx  Sidebar.tsx  globals.css  layout.module.css  layout.tsx  page.module.css  page.tsx
frontend/src/app/eligibility/: eligibility.module.css  page.tsx
frontend/src/app/history/: page.module.css  page.tsx
frontend/src/app/login/: page.module.css  page.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: api.ts
localstack-init/: init-aws.sh
scripts/: create_test_users.sh
src/api/: aws_clients.py  config.py  main.py  models.py
src/cli/: __init__.py  __main__.py  cli.py
src/executor/: __init__.py  executor.py
src/observability/: __init__.py  storage.py
src/reaper/: __init__.py
src/scheduler/: dispatcher.py  worker.py
terraform/: alb.tf  ecs.tf  lambda.tf  main.tf  outputs.tf  sqs.tf  storage.tf  terraform.tfvars  variables.tf
tests/: test_agent.py  test_api.py  test_dispatcher.py
(+5 files in other folders)
